# storm

./: .gitignore  Cargo.toml  DEV_DATA.md  FIXTURE_COMPARISON.md  RALPH_TASK.md  README.md  crates.js  dev-requirements.txt  help.html  index.html  pyproject.toml  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.github/workflows/: cd.yml  ci.yml  docs.yml  git_pages.yml
.ralph/: guardrails.md  progress.md  tasks.mtime  tasks.yaml
data/tr_loci_hg38/: tr_loci_hg38.tsv
docker/: Dockerfile  Dockerfile.glibc  Dockerfile.musl
docs/: requirements.txt  saige_phewas_plan.md  test_units.md
docs/source/: conf.py  index.rst
examples/: hail_join_example.py
fixtures/: plan.yaml  sv_small.vcf  sv_with_overlap.vcf  trexplorer.bed  trexplorer.json  trgt_sample1.vcf  trgt_sample2.vcf  trgt_small.vcf
notebooks/: kvg_filter_pipeline.ipynb  kvg_filter_snv_indels.ipynb  storm_demo.ipynb  storm_hail_dev.ipynb  visualize.ipynb  visualize_plot.py
notebooks/.ipynb_checkpoints/: storm_demo-checkpoint.ipynb
python/: .buildinfo  .isort.cfg  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
python/_sources/python/: index.rst.txt
python/_sources/rust/: index.rst.txt
python/python/: index.html
python/rust/: index.html
python/storm/: __init__.py  _api.py  saige_prep.py  sv_annotate.py
python/storm/tr_sidecar/: __init__.py  __main__.py  builder.py  catalog.py  hail_io.py  match.py  schema.py
python/tests/: test_storm.py
rust/: all.html  fn.add.html  index.html
scripts/: annotate_vcf_info_notebook.py
scripts/saige/: example_chr22.config  run_saige.R
search.desc/storm/: storm-desc-0-.js
src/: encoding.rs  explain.rs  glm.rs  lib.rs  main.rs  mapping.rs  plan.rs  resolver.rs  results.rs  testunit.rs
src/cache/: arrow_cache.rs  mod.rs  parquet_cache.rs
src/catalog/: bed.rs  json.rs  mod.rs
src/storm/: lib.rs.html
src/vcf/: mod.rs  sv.rs  trgt.rs
storm/: all.html  fn.add.html  index.html
storm_cache/: catalog.parquet  features.parquet  provenance.json  provenance.parquet
storm_cache_test/: provenance.json  provenance.parquet  test_units.parquet
storm_cache_test2/: catalog.parquet  features.parquet  genotypes.parquet  provenance.json  provenance.parquet  test_units.parquet
test_cache_cli/: catalog.parquet  genotypes.parquet  provenance.json  provenance.parquet
tests/: integration_tests.rs  test_saige_prep.py  test_tr_sidecar.py
