[package]
name = "storm"
version = "0.0.3"
edition = "2021"

[lib]
name = "storm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "storm"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
thiserror = "1.0"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = "0.5" 
