[package]
name = "storm"
version = "0.0.4"
edition = "2021"

[lib]
name = "storm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "storm"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"], optional = true }
thiserror = "2.0.12"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = "0.6.0" 
