[package]
name = "storm"
version = "0.0.23"
edition = "2021"

[lib]
name = "storm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "storm"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"], optional = true }
thiserror = "2.0.12"
noodles = { version = "0.88", features = ["vcf", "bgzf"] }
indexmap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
arrow = { version = "54" }
parquet = { version = "54", features = ["arrow"] }
chrono = "0.4"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = "0.6.0" 
