[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "storm"
requires-python = ">=3.10"
dependencies = ["cffi", "pysam", "pyarrow"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
storm-tr-sidecar = "storm.tr_sidecar.__main__:main"

# Hail is often installed via conda or a lab image; the pip extra pins Terra's version.
[project.optional-dependencies]
hail = ["hail==0.2.134"]

[tool.maturin]
features = ["python"]
manifest-path = "../Cargo.toml"
python-source = "."
dependencies = ["cffi"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$' 

[tool.ruff]
# Ignore F403 (unable to detect undefined names from *)
# and F405 (may be undefined, or defined from star imports)
ignore = ["F403", "F405"]
# Also specify which files to check
include = ["*.py", "*.pyi"] 